--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext.kotlin_version = '1.6.10'
-    ext.nav_version = '2.4.0'
+    ext.nav_version = '2.5.0-alpha01'
 
     repositories {
         google()
