--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CatFood" >
         <activity
-            android:name=".activity.SplashActivity"
+            android:name="app.khodko.catfood.ui.activity.SplashActivity"
             android:exported="true"
             android:theme="@style/SplashTheme" >
             <intent-filter>
@@ -24,13 +24,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.MainActivity"
+            android:name="app.khodko.catfood.ui.activity.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.CatFood.NoActionBar"
             android:windowSoftInputMode="stateHidden|adjustResize" />
 
         <activity
-            android:name=".activity.SignInActivity"
+            android:name="app.khodko.catfood.ui.activity.SignInActivity"
             android:label="@string/sign_in_activity_label"
             android:exported="true"
             android:theme="@style/Theme.CatFood.NoActionBar" />
